fix letter spacing in style.css

--- a/CSS/style.css
+++ b/CSS/style.css
@@ -45,16 +45,20 @@ figure img {
     text-decoration: none;
 }
 
-.bio p {
-    font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    font-size: 1.1rem;
-    text-align: left;
-    padding: 10%;
-    word-spacing: normal;
+.bio {
+    width: 100%;
+    margin: 0 auto;
+    
 }
 
-.bio {
-    margin: 0 auto;
+.bio p {
+    font-family:'Poppins', sans-serif;;
+    font-size: 1.1rem;
+    text-align: justify;
+    letter-spacing: .1px;
+    word-spacing: -2px;
+    padding: 5% 10%;
+    
 }
 
 footer p {
@@ -73,6 +77,7 @@ footer p {
 @media only screen and (orientation: portrait) and (max-width: 424px) {
     .bio p {
         font-size: 0.875rem;
+        word-spacing: -3px;
     }
 
     h1 {
